<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:title="@string/dashboard_overview" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/dashboard_profile" />
        <item
            android:id="@+id/nav_board_preferences"
            android:title="@string/dashboard_board_preferences" />
        <item
            android:id="@+id/nav_private_messages"
            android:title="@string/dashboard_private_messages" />
        <item
            android:id="@+id/nav_user_groups"
            android:title="@string/dashboard_user_groups" />
        <item
            android:id="@+id/nav_friends_and_foes"
            android:title="@string/dashboard_friends_and_foes" />
    </group>
</menu>
