<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:visible="false"
            android:id="@+id/nav_home"
            android:title="@string/main_home" />
        <item
            android:visible="false"
            android:id="@+id/nav_free_celpip_sample_tests"
            android:title="@string/main_free_celpip_sample_tests" />
        <item
            android:visible="false"
            android:id="@+id/nav_celpip_coaching_and_exam_centres"
            android:title="@string/main_celpip_coaching_and_exam_centres" />

        <item
            android:id="@+id/nav_login"
            android:title="@string/main_login" />
        <item
            android:id="@+id/nav_registration"
            android:title="@string/main_registration" />
    </group>

</menu>
