<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile_edit_signature"
            android:title="@string/profile_edit_signature" />
        <item
            android:id="@+id/nav_profile_edit_avatar"
            android:title="@string/profile_edit_avatar" />
        <item
            android:id="@+id/nav_profile_edit_account_settings"
            android:title="@string/profile_edit_account_settings" />
        <item
            android:id="@+id/nav_profile_manage_login_keys"
            android:title="@string/profile_manage_login_keys" />
    </group>
</menu>
